--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,22 +15,22 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_svg: ^2.0.1
   #service locator
-  get_it: ^2.0.1
+  get_it: ^6.0.0
   #bloc for state management
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   #value equality
-  equatable: ^0.4.0
+  equatable: ^2.0.5
   #functional programing thingies
-  dartz: ^0.8.6
+  dartz: ^0.10.1
   #remote API
-  connectivity: ^0.4.3+7
+#  connectivity: ^0.4.3+7
   http: ^0.13.0
   #local cache
   shared_preferences: ^2.0.17
   persistent_bottom_nav_bar: any
   cupertino_icons: ^1.0.2
-  scrollable_positioned_list: ^0.1.10
+  scrollable_positioned_list: ^0.3.5
   form_field_validator: ^1.1.0
 dev_dependencies:
   flutter_test:
