--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+   sdk: flutter
+  intl: any
   google_fonts: ^4.0.1
   simple_animations: ^5.0.0+3
   cached_network_image: ^3.1.0
@@ -23,7 +26,9 @@ dependencies:
   equatable: ^2.0.5
   #functional programing thingies
   dartz: ^0.10.1
+
   #remote API
+  lottie: ^2.0.0
 #  connectivity: ^0.4.3+7
   http: ^0.13.0
   #local cache
@@ -32,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   scrollable_positioned_list: ^0.3.5
   form_field_validator: ^1.1.0
+  table_calendar: ^3.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -39,8 +45,10 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 flutter:
 
+  generate: true #
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/icons/
     - assets/icons/category/
