--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   scrollable_positioned_list: ^0.3.5
   form_field_validator: ^1.1.0
   table_calendar: ^3.0.8
+  intl_phone_field: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
